--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,7 +120,7 @@ body {
     @apply border-2 border-red-500 border-dashed;
   }
 
-  .responsive-text {
+  p {
     @apply text-sm sm:text-base 2xl:text-lg;
   }
 }
